Added new quote form

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -18,6 +18,7 @@
       />
       <button id="addQuoteBtn">Add Quote</button>
     </div>
+    <div id="quoteForm"></div>
     <script src="script.js"></script>
   </body>
 </html>
